fix: improve contrast ratios and add default language

--- a/restaurant_app/css/styles.css
+++ b/restaurant_app/css/styles.css
@@ -90,7 +90,7 @@ section {
 	font-size: 0.9em;
 	letter-spacing: 0.2em;
 	background-color: #444;
-	color: #aaa;
+	color: #fff;
 	padding: 25px;
 	text-align: center;
 	text-transform: uppercase;
@@ -148,7 +148,7 @@ nav h1 a {
 /* Add a color to all links inside the list */
 
 #breadcrumb li a {
-	color: #0275d8;
+	color: #035297;
 	text-decoration: none;
 }
 
@@ -239,7 +239,7 @@ nav h1 a {
 }
 
 #restaurants-list li h2 {
-	color: #f18200;
+	color: #764102;
 	font-family: Arial, sans-serif;
 	font-size: 14pt;
 	font-weight: 200;
@@ -257,7 +257,7 @@ nav h1 a {
 #restaurants-list li a {
 	background-color: orange;
 	border-bottom: 3px solid #eee;
-	color: #fff;
+	color: #1d0707;
 	display: inline-block;
 	font-size: 1em;
 	margin: 15px 0 0;
@@ -285,7 +285,7 @@ nav h1 a {
 	font-size: 0.9em;
 	letter-spacing: 0.2em;
 	background-color: #444;
-	color: #aaa;
+	color: #fff;
 	padding: 25px;
 	text-align: center;
 	text-transform: uppercase;
@@ -293,7 +293,7 @@ nav h1 a {
 }
 
 #restaurant-name {
-	color: #f18200;
+	color: #764102;
 	font-family: Arial, sans-serif;
 	font-size: 2em;
 	font-weight: 200;
@@ -337,7 +337,7 @@ nav h1 a {
 }
 
 #reviews-container h3 {
-	color: #f58500;
+	color: #764102;
 	font-size: 24pt;
 	font-weight: 300;
 	letter-spacing: -1px;
@@ -376,14 +376,14 @@ nav h1 a {
 }
 
 #reviews-list li .date {
-	color: #aaa;
+	color: #3c3838;
 	float: right;
 	font-size: 0.8m;
 }
 
 #reviews-list li .rating {
 	background-color: #f58500;
-	color: #fff;
+	color: #1d0707;
 	padding: 5px;
 	font-size: 1em;
 	width: 100px;
